<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_layers_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_soferi"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_info"
            android:icon="@drawable/ic_info_black_24dp"
            android:title="@string/menu_slideshow" />

    </group>

    <item android:title="Feedback">
        <menu>

            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
        </menu>
    </item>

</menu>
