<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_soferi">

    <fragment
        android:id="@+id/nav_soferi"
        android:name="com.twexdo.client.ui.soferi.SoferiFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_soferi" />

    <fragment
        android:id="@+id/nav_home"
        android:name="com.twexdo.client.ui.maps.MapFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_map" />


    <fragment
        android:id="@+id/nav_info"
        android:name="com.twexdo.client.ui.info.InfoFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_info" />



    <fragment
        android:id="@+id/nav_send"
        android:name="com.twexdo.client.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
</navigation>