<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C9000000">

    <TextView
        android:scrollbars = "vertical"
        android:padding="10dp"
        android:textColor="#FFF"
        android:background="#25FFFFFF"
        android:id="@+id/main_Text"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="15dp"
        android:textStyle="italic"
        android:textAlignment="textStart"
        android:textSize="20sp"
        android:text="@string/infos"
        android:layout_weight="1"/>

    <TextView
        android:scrollbars = "vertical"
        android:id="@+id/second_text"
        android:layout_weight="2"
        android:layout_margin="15dp"
        android:textStyle="italic"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/info2"
        android:textColor="#FFF"/>
    <TextView
        android:layout_weight="2"
        android:layout_margin="15dp"
        android:textStyle="italic"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/infoDeveloper"
        android:textColor="#FFF"
        android:gravity="bottom|end"/>
</LinearLayout>